fixed header spacing

--- a/static/global.css
+++ b/static/global.css
@@ -64,6 +64,8 @@ h4 {
   font-variant: var(--header-font-variant, 'small-caps');
   font-size: 1.2rem;
   text-align: center;
+  margin-bottom: 0.2rem;
+  margin-top: 0.4rem;
 } 
 
 h3 {
@@ -79,10 +81,14 @@ h2 {
   font-family: var(--header-font-family, 'sans-serif');
   font-variant: var(--header-font-variant, 'small-caps');
   font-size: 2.2rem;
+  margin-bottom: 0.8rem;
+  margin-top: 1.2rem;
 } 
 
 h1 {
   font-family: var(--header-font-family, 'sans-serif');
   font-variant: var(--header-font-variant, 'small-caps');
   font-size: 3rem;
+  margin-bottom: 0.8rem;
+  margin-top: 1.2rem;
 } 
